--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-We upgraded our tracker protection to block even more third party trackers. Other bug fixes and improvements.
+Bug fixes and other improvements.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
