--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-Bug fixes and other improvements.
+We improved our widget search; you can now also search for your apps. We also improved our page loading and tweaked our tab ordering.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
