Add expanded view

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,6 +1,7 @@
 ﻿<resources xmlns:tools="http://schemas.android.com/tools">
 
     <string name="duckDuckGoLogoDescription">Logo DuckDuckGo</string>
+    <string name="duckDuckGoPrivacySimplified">Le respect de votre vie privée, simplifié.</string>
     <string name="yes">Oui</string>
     <string name="no">Non</string>
 
@@ -175,7 +176,6 @@
 
     <!-- About Activity -->
     <string name="aboutActivityTitle">À propos de nous</string>
-    <string name="aboutHeading">Le respect de votre vie privée, simplifié.</string>
     <string name="aboutDescription">
         Chez DuckDuckGo, nous établissons la nouvelle norme de confiance en ligne. \n\ Le navigateur de confidentialité DuckDuckGo fournit tous les éléments de confidentialité essentiels dont vous avez besoin pour vous protéger lorsque vous faites des recherches et naviguez sur le Web, notamment le blocage des trackers, le chiffrement plus intelligent et la recherche privée DuckDuckGo.\n\ Après tout, Internet ne devrait pas être aussi effrayant, et obtenir la confidentialité que vous méritez en ligne devrait être aussi simple que de fermer les stores.</string>
     <string name="aboutMoreLink">Pour en savoir plus, visitez duckduckgo.com/about</string>
