--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <string name="duckDuckGoLogoDescription">Logotip DuckDuckGo</string>
+    <string name="duckDuckGoPrivacySimplified">Zaštita privatnosti, pojednostavljeno.</string>
     <string name="yes">Da</string>
     <string name="no">Ne</string>
 
@@ -175,7 +176,6 @@
 
     <!-- About Activity -->
     <string name="aboutActivityTitle">O nama</string>
-    <string name="aboutHeading">Zaštita privatnosti, pojednostavljeno.</string>
     <string name="aboutDescription">
         U DuckDuckGo postavljamo novi standard povjerenja na mreži.\n\ DuckDuckGo anonimni preglednik pruža sve što vam je potrebno da se zaštitite dok pretražujete i pregledavate internet, uključujući blokiranje alata za praćenje, pametnije šifriranje i privatno pretraživanje DuckDuckGo.\n\ Uostalom, internet ne bi trebao biti jezivo mjesto, a dobivanje privatnosti koju zaslužujete na internetu trebalo bi biti jednostavno poput spuštanja roleta.</string>
     <string name="aboutMoreLink">Više na duckduckgo.com/about</string>
