--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <string name="duckDuckGoLogoDescription">Logo DuckDuckGo</string>
+    <string name="duckDuckGoPrivacySimplified">Ochrana soukromí, zjednodušená.</string>
     <string name="yes">Ano</string>
     <string name="no">Ne</string>
 
@@ -179,7 +180,6 @@
 
     <!-- About Activity -->
     <string name="aboutActivityTitle">O nás</string>
-    <string name="aboutHeading">Ochrana soukromí, zjednodušená.</string>
     <string name="aboutDescription">
         V DuckDuckGo přinášíme nový standard důvěry online.\n\ DuckDuckGo Privacy Browser poskytuje všechny základní prvky soukromí, které potřebujete k ochraně při vyhledávání a prohlížení webu, včetně blokování sledovacích zařízení, chytřejšího šifrování a soukromého vyhledávání DuckDuckGo.\n\ Internet by v konečném důsledku neměl být tak nebezpečný a získat soukromí, které si zasloužíte online, by mělo být stejně jednoduché jako zatáhnout žaluzie.</string>
     <string name="aboutMoreLink">Více na duckduckgo.com/about</string>
