--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,7 @@
 ﻿<resources xmlns:tools="http://schemas.android.com/tools">
 
     <string name="duckDuckGoLogoDescription">DuckDuckGo-Logo</string>
+    <string name="duckDuckGoPrivacySimplified">Datenschutz – leicht gemacht.</string>
     <string name="yes">Ja</string>
     <string name="no">Nein</string>
 
@@ -175,7 +176,6 @@
 
     <!-- About Activity -->
     <string name="aboutActivityTitle">Über uns</string>
-    <string name="aboutHeading">Datenschutz – leicht gemacht.</string>
     <string name="aboutDescription">
         Wir bei DuckDuckGo setzen den neuen Standard für Vertrauen im Internet.\n\ Der DuckDuckGo Privacy Browser bietet alle Datenschutzgrundlagen, die du benötigst, um dich beim Suchen und Browsen im Internet zu schützen, einschließlich Tracker-Blockierung, intelligentere Verschlüsselung und DuckDuckGo-Privatmodussuche.\n\ Schließlich muss das Internet kein unheimlicher Ort sein und die Online-Privatsphäre zu bekommen, die du verdienst, sollte so einfach sein wie das Zuziehen deiner Vorhänge.</string>
     <string name="aboutMoreLink">Mehr auf duckduckgo.com/about</string>
