--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -356,5 +356,6 @@
     <string name="feedbackInitialDisambiguationHappyButtonContentDescription">Positiivinen palaute -painike</string>
     <string name="feedbackInitialDisambiguationSadButtonContentDescription">Negatiivinen palaute -painike</string>
     <string name="feedbackIsImportantToUs">Anonyymi palautteesi on meille tärkeää.</string>
+    <string name="systemSearchOmnibarInputHint"><font size="13">Hae tai kirjoita URL</font></string>
 
 </resources>
